
[workspace]
members = [
    "guessing_game",
    "ownership",
    "first_word",
    "managing_growing_project/bin_crates",
    "managing_growing_project/modules",
    "common_collection",
    "error_handling",
    "generic_traits_lifetime",
    "io_project",
    "funtional_language",
    "smart_pointer",
    "concurrency",
]