
[workspace]
members = [
    "guessing_game",
    "ownership",
    "managing_growing_project/bin_crates",
    "managing_growing_project/modules",
    "common_collection",
    "error_handling",
    "generic_traits_lifetime",
    "io_project",
    "funtional_language",
    "smart_pointer",
    "concurrency",
    "oops/gui",
    "oops/blog",
    "advance_features/unsafe_rust",
    "advance_features/advance_traits",
]